--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "author": "Ahmed Mokhtar",
+  "scripts":{
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.16.3",
     "hbs": "^4.0.1"
